--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,7 @@
 {
-    "compilerOptions": {
-        "sourceMap": true
-    }
+  "compilerOptions": {
+    "target": "es2015", // required for custom component
+    "sourceMap": true,
+  },
+  "include": ["src/**/*"]
 }
